# snake_game

./: .gitignore  CMakeBuild.bat  CMakeBuildAndMake.bat  CMakeLists.txt  Clean.bat  Make.bat  main.c
src/: config.ini  main.c  settings.ini
src/consts/: errors.h  paths.h
src/controller/: controller.c  controller.h
src/interface/: interface.c  interface.h  interface_messages.c  interface_messages.h
src/resources/: snake.rc
src/tools/: tools.c  tools.h
